updating ss2022 list

--- a/ss2022/index.html
+++ b/ss2022/index.html
@@ -21,51 +21,48 @@
       <div class="leftItem"><p>12:15-13:45</p></div>
       <div class="leftItem"><p>14:15-15:45</p></div>
       <div class="leftItem"><p>16:15-17:45</p></div>
-      <div class="leftItem"><p>18:15-19:45</p></div>
+      <!--<div class="leftItem"><p>18:15-19:45</p></div>-->
     </div>
+    <!--<div class="item ra"><p class="moduleTime">10:15-11:45</p><p class="moduleTxt">Rechnerarchitektur</p><p class="subTxt">Q&A</p><a class="zoomIcon" href=""><i class="fas fa-video"></i></a></div>--->
     <div class="row">
       <div class="headerItem"><p>Montag</p></div>
-      <div class="item ra"><p class="moduleTime">10:15-11:45</p><p class="moduleTxt">Rechnerarchitektur</p><p class="subTxt">Q&A</p><a class="zoomIcon" href="https://uni-bielefeld.zoom.us/j/98278914859?pwd=VVNHbGZHVHpFNEN3VUk4Vy9EWDNzdz09"><i class="fas fa-video"></i></a></div>
       <div class="item"></div>
-      <div class="item tut gmlTut"><p class="moduleTime">12:15-13:45</p><p class="moduleTxt">Maschinelles Lernen</p><p class="subTxt">Tutorium</p><p class="locationTxt">T2-204</p></div>
-      <div class="item tut gkkTut"><p class="moduleTime">14:15-15:45</p><p class="moduleTxt">Künstliche Kognition</p><p class="subTxt">Tutorium</p><p class="locationTxt">V2-121</p></div>
-      <div class="item"></div>
-      <div class="item tut matheTut"><p class="moduleTime">18:15-19:45</p><p class="moduleTxt">Vertiefung Mathe</p><p class="subTxt">Tutorium</p><a class="zoomIcon" href="https://uni-bielefeld.zoom.us/j/95856138931?pwd=bXNmeXlrK00yOWRCcFZKQ1VNbGpldz09"><i class="fas fa-video"></i></a></div>
+      <div class="item de"><p class="moduleTime">10:15-11:45</p><p class="moduleTxt">Digitalelektronik</p><p class="subTxt">Vorlesung</p><p class="locationTxt">CITEC</p></div>
+      <div class="item">GSI Ü</div>
+      <div class="item">Team 1-1</div>
+      <div class="item">Team 2-1</div>
     </div>
     <div class="row">
       <div class="headerItem"><p>Dienstag</p></div>
       <div class="item"></div>
-      <div class="item"></div>
-      <div class="item gml"><p class="moduleTime">12:15-13:45</p><p class="moduleTxt">Maschinelles Lernen</p><p class="subTxt">Q&A</p><a class="zoomIcon" href="https://uni-bielefeld.zoom.us/j/94957231520?pwd=bVBwMUVidzZ4SGhrR0srVHViN2tjQT09"><i class="fas fa-video"></i></a></div>
-      <div class="item"></div>
-      <div class="item tut softwTut"><p class="moduleTime">16:15-17:45</p><p class="moduleTxt">Software Engineering</p><p class="subTxt">Seminar</p><p class="locationTxt">D2-136</p><a class="zoomIcon" href="https://uni-bielefeld.zoom.us/j/91050929243?pwd=V2o2MG02LzBRbThTTjZOTjd1NWUvUT09"><i class="fas fa-video"></i></a></div>
-      <div class="item"></div>
+      <div class="item gnn"><p class="moduleTime">10:15-11:45</p><p class="moduleTxt">Neuronale Netze</p><p class="subTxt">Vorlesung</p><p class="locationTxt">CITEC</p></div>
+      <div class="item tut matheTut"><p class="moduleTime">12:15-13:45</p><p class="moduleTxt">Mathe IV</p><p class="subTxt">Tutorium</p><p class="locationTxt">V2-216</p></div>
+      <div class="item">GSI Ü</div>
+      <div class="item">Team 2-2, 3-1</div>
     </div>
     <div class="row">
       <div class="headerItem"><p>Mittwoch</p></div>
+      <div class="item mathe"><p class="moduleTime">8:15-10:45</p><p class="moduleTxt">Mathe IV</p><p class="subTxt">Vorlesung</p><p class="locationTxt">H7</p></div>
       <div class="item"></div>
       <div class="item"></div>
-      <div class="item tut raTut"><p class="moduleTime">12:15-13:45</p><p class="moduleTxt">Rechnerarchitektur</p><p class="subTxt">Tutorium</p><a class="zoomIcon" href="https://uni-bielefeld.zoom.us/j/92461656102?pwd=MUN4d2FINWNRN1JHN3pnMHVscUxSdz09"><i class="fas fa-video"></i></a></div>
-      <div class="item mathe"><p class="moduleTime">14:15-15:45</p><p class="moduleTxt">Vertiefung Mathe</p><p class="subTxt">Vorlesung</p><a class="zoomIcon" href="https://uni-bielefeld.zoom.us/j/99590266069?pwd=clVPQ1R0RFFpZjFTLy9QWXlVenRJQT09"><i class="fas fa-video"></i></a></div>
       <div class="item"></div>
       <div class="item"></div>
     </div>
     <div class="row">
       <div class="headerItem"><p>Donnerstag</p></div>
       <div class="item"></div>
-      <div class="item gkk"><p class="moduleTime">10:15-11:45</p><p class="moduleTxt">Künstliche Kognition</p><p class="subTxt">Vorlesung</p><p class="locationTxt">CITEC, ONLINE</p><a class="zoomIcon" href="https://uni-bielefeld.zoom.us/j/97844339936?pwd=VTZlS0ZHcHZ4YkxaQStjVW9kK1E4dz09"><i class="fas fa-video"></i></a></div>
-      <div class="item softw"><p class="moduleTime">12:15-13:45</p><p class="moduleTxt">Software Engineering</p><p class="subTxt">Vorlesung</p><p class="locationTxt">H4, ONLINE</p><a class="zoomIcon" href="https://uni-bielefeld.zoom.us/j/99037007233?pwd=S1R0THVDeTFYcnZNNWc3dm5tWFFsZz09"><i class="fas fa-video"></i></a></div>
-      <div class="item datab"><p class="moduleTime">14:15-15:45</p><p class="moduleTxt">Datenbanken</p><p class="subTxt">Vorlesung</p><a class="zoomIcon" href="https://uni-bielefeld.zoom.us/j/92498693783?pwd=eklWYU5KQ0Y2RGxjS1UrWXNzck5MZz09"><i class="fas fa-video"></i></a></div>
       <div class="item"></div>
+      <div class="item tut sgpTut"><p class="moduleTime">12:15-13:45</p><p class="moduleTxt">Software-Gruppenprojekt</p><p class="subTxt">Tutorium (vermutl.)</p></div>
       <div class="item"></div>
+      <div class="item">Team 1-2, 4-2</div>
     </div>
     <div class="row">
       <div class="headerItem"><p>Freitag</p></div>
-      <div class="item"></div><div class="item"></div>
-      <div class="item tut databTut"><p class="moduleTime">12:15-13:45</p><p class="moduleTxt">Datenbanken</p><p class="subTxt">Tutorium</p><a class="zoomIcon" href="https://uni-bielefeld.zoom.us/j/98173678171?pwd=TnRlTDN2NXFSUzBoTHdWZHpFNjhCQT09"><i class="fas fa-video"></i></a></div>
-      <div class="item tut softwTut"><p class="moduleTime">14:15-15:45</p><p class="moduleTxt">Software Engineering</p><p class="subTxt">Tutorium</p><p class="locationTxt">V2-221/222</p><a class="zoomIcon" href="https://uni-bielefeld.zoom.us/j/93230946026?pwd=cVNtY0dPTEJRd1hKSzRoK1FNTFI3UT09"><i class="fas fa-video"></i></a></div>
       <div class="item"></div>
-      <div class="item"></div>
+      <div class="item">GSI-Ü</div>
+      <div class="item">GSI-Ü, Team 3-2</div>
+      <div class="item gsi"><p class="moduleTime">14:15-15:45</p><p class="moduleTxt">Sprachliche Interaktionen</p><p class="subTxt">Vorlesung</p><p class="locationTxt">CITEC</p></div>
+      <div class="item tut gnnTut"><p class="moduleTime">16:15-17:45</p><p class="moduleTxt">Neuronale Netze</p><p class="subTxt">Tutorium (vermutl.)</p></div>
     </div>
   </div>
 
@@ -74,46 +71,33 @@
     <p id="upperTitle" class="title">Module</p>
     <div class="modules">
       <div class="moduleItem">
-        <a class="moduleLink" id="ekvv" href="https://ekvv.uni-bielefeld.de/kvv_publ/publ/benvw_Login_MatrikelAct">eKVV</a>
+        <p class="moduleTitle">Allgemein</p>
+        <a class="moduleLink" href="https://ekvv.uni-bielefeld.de/kvv_publ/publ/benvw_Login_MatrikelAct">eKVV</a>
         <a class="moduleLink" href="https://docs.google.com/spreadsheets/d/1gHT5yleFO7J8022jn4L9Je-N-mDim4P59t-0V5LPmRo/edit#gid=1893177104">Liste (Google-Sheets)</a>
       </div>
       <div class="moduleItem">
-        <p class="moduleTitle">Rechnerarchitektur</p>
-        <a class="moduleLink techfak" href="https://www.ti.uni-bielefeld.de/html/teaching/WS2122/techinf1/index.html">TechFak</a>
-        <a class="moduleLink techfak" href="https://www.ti.uni-bielefeld.de/downloads/WS2122/techinf1/VIDEOCAPTURE/ra_videos_weekly.html">Videos (mit PW)</a>
-        <a class="moduleLink lrplus" href="https://lernraumplus.uni-bielefeld.de/course/view.php?id=11124">Lernraum+</a>
+        <p class="moduleTitle">Betriebssysteme</p>
+        <a class="moduleLink lrplus" href="https://lernraumplus.uni-bielefeld.de/course/view.php?id=12922">Lernraum+</a>
       </div>
       <div class="moduleItem">
-        <p class="moduleTitle">Datenbanken</p>
-        <a class="moduleLink lrplus" href="https://lernraumplus.uni-bielefeld.de/course/view.php?id=11379">Lernraum+</a>
+        <p class="moduleTitle">Software-Gruppenprojekt</p>
+        <a class="moduleLink lrplus" href="https://lernraumplus.uni-bielefeld.de/course/view.php?id=12773">Lernraum+</a>
+        <a class="moduleLink" href="https://se.techfak.de/projects/gp-se-ss-2022/wiki">Themenblöcke Übersicht (Zoom-Links)</a>
+        <a class="moduleLink redmine" href="https://se.techfak.de/projects/gp-se-ss-2022">Redmine</a>
+        <!--<a class="moduleLink jenkins" href="https://citdpe.techfak.uni-bielefeld.de/">Jenkins</a>-->
+      </div>
+      <!--<div class="moduleItem">
+        <p class="moduleTitle">Neuronale Netze</p>
       </div>
       <div class="moduleItem">
-        <p class="moduleTitle">Software Engineering</p>
-        <a class="moduleLink lrplus" href="https://lernraumplus.uni-bielefeld.de/course/view.php?id=11465">LR+ Vorlesung</a>
-        <a class="moduleLink lrplus" href="https://lernraumplus.uni-bielefeld.de/course/view.php?id=11464">LR+ Tutorium</a>
-        <a class="moduleLink lrplus" href="https://lernraumplus.uni-bielefeld.de/course/view.php?id=11466">LR+ Seminar</a>
-        <a class="moduleLink matrix" href="https://app.element.io/#/room/#uebung6-se-teams:uni-bielefeld.de">Matrix</a>
-        <a class="moduleLink redmine" href="https://se.techfak.de/projects">Redmine</a>
-        <a class="moduleLink jenkins" href="https://citdpe.techfak.uni-bielefeld.de/">Jenkins</a>
+        <p class="moduleTitle">Sprachliche Interaktion</p>
       </div>
       <div class="moduleItem">
-        <p class="moduleTitle">Mathe Vertiefung</p>
-        <a class="moduleLink lrplus" href="https://lernraumplus.uni-bielefeld.de/course/view.php?id=10376">Lernraum+</a>
-        <a class="moduleLink dropbox" href="https://www.dropbox.com/sh/pezap2y3u3zwqkn/AABCeI_IHB4O5gmcb9-NDz-Ia?dl=0">Dropbox Folien</a>
+        <p class="moduleTitle">Mathe IV</p>
       </div>
       <div class="moduleItem">
-        <p class="moduleTitle">Künstliche Kognition</p>
-        <a class="moduleLink lr" href="https://bis.uni-bielefeld.de/sites/42103/Start.aspx">Lernraum</a>
-        <a class="moduleLink lrplus" href="https://lernraumplus.uni-bielefeld.de/course/view.php?id=11690">LR+ Vorlesung</a>
-        <a class="moduleLink lrplus" href="https://lernraumplus.uni-bielefeld.de/course/view.php?id=11729">LR+ Tutorium</a>
-      </div>
-      <div class="moduleItem">
-        <p class="moduleTitle">Maschinelles Lernen</p>
-        <a class="moduleLink lr" href="https://bis.uni-bielefeld.de/sites/40704/Start.aspx">Lernraum</a>
-        <a class="moduleLink lrplus" href="https://lernraumplus.uni-bielefeld.de/course/view.php?id=10999">Lernraum+</a>
-        <a class="moduleLink video" href="https://uni-bielefeld.cloud.panopto.eu/Panopto/Pages/Sessions/List.aspx#folderID=%22c1b650fe-62e1-40f7-ab98-ada500b5a837%22">Videos</a>
-        <a class="moduleLink" href="https://lernraumplus.uni-bielefeld.de/pluginfile.php/582471/mod_resource/content/1/course_overview.pdf">Course Overview</a>
-      </div>
+        <p class="moduleTitle">Digitalelektronik</p>
+      </div>-->
     </div>
 
     <button id="showJSONpart" onclick="showJSONpart()" class="showJSONpart">TODO & Punktetabelle laden</button>
