updating ss2022 list

--- a/ss2022/index.html
+++ b/ss2022/index.html
@@ -26,9 +26,9 @@
     <!--<div class="item ra"><p class="moduleTime">10:15-11:45</p><p class="moduleTxt">Rechnerarchitektur</p><p class="subTxt">Q&A</p><a class="zoomIcon" href=""><i class="fas fa-video"></i></a></div>--->
     <div class="row">
       <div class="headerItem"><p>Montag</p></div>
-      <div class="item"></div>
+      <div class="item bs"><p class="moduleTime">8:15-9:45</p><p class="moduleTxt">Betriebssysteme</p><p class="subTxt">Q&A</p><p class="locationTxt">ONLINE</p></div>
       <div class="item de"><p class="moduleTime">10:15-11:45</p><p class="moduleTxt">Digitalelektronik</p><p class="subTxt">Vorlesung</p><p class="locationTxt">CITEC</p></div>
-      <div class="item">GSI Ü</div>
+      <div class="item">GSI Ü, BTS Ü</div>
       <div class="item">Team 1-1</div>
       <div class="item">Team 2-1</div>
     </div>
@@ -43,10 +43,10 @@
     <div class="row">
       <div class="headerItem"><p>Mittwoch</p></div>
       <div class="item mathe"><p class="moduleTime">8:15-10:45</p><p class="moduleTxt">Mathe IV</p><p class="subTxt">Vorlesung</p><p class="locationTxt">H7</p></div>
+      <div class="item">BTS Ü</div>
       <div class="item"></div>
-      <div class="item"></div>
-      <div class="item"></div>
-      <div class="item"></div>
+      <div class="item tut bsTut"><p class="moduleTime">14:15-15:45</p><p class="moduleTxt">Betriebssysteme</p><p class="subTxt">Tutorium (vermutl.)</p><p class="locationTxt">ONLINE</p></div>
+      <div class="item">BTS Ü</div>
     </div>
     <div class="row">
       <div class="headerItem"><p>Donnerstag</p></div>
@@ -77,6 +77,7 @@
       </div>
       <div class="moduleItem">
         <p class="moduleTitle">Betriebssysteme</p>
+        <a class="moduleLink techfak" href="https://www.ti.uni-bielefeld.de/html/teaching/SS22/techinf2/index.html">Ti-Seite</a>
         <a class="moduleLink lrplus" href="https://lernraumplus.uni-bielefeld.de/course/view.php?id=12922">Lernraum+</a>
       </div>
       <div class="moduleItem">
@@ -86,14 +87,16 @@
         <a class="moduleLink redmine" href="https://se.techfak.de/projects/gp-se-ss-2022">Redmine</a>
         <!--<a class="moduleLink jenkins" href="https://citdpe.techfak.uni-bielefeld.de/">Jenkins</a>-->
       </div>
+      <div class="moduleItem">
+        <p class="moduleTitle">Mathe IV</p>
+        <a class="moduleLink lr" href="https://bis.uni-bielefeld.de/sites/45545/Start.aspx">Lr Vorlesung</a>
+        <a class="moduleLink lr" href="https://bis.uni-bielefeld.de/sites/45548/Start.aspx">Lr Übung</a>
+      </div>
       <!--<div class="moduleItem">
         <p class="moduleTitle">Neuronale Netze</p>
       </div>
       <div class="moduleItem">
         <p class="moduleTitle">Sprachliche Interaktion</p>
-      </div>
-      <div class="moduleItem">
-        <p class="moduleTitle">Mathe IV</p>
       </div>
       <div class="moduleItem">
         <p class="moduleTitle">Digitalelektronik</p>
