updating ss2022 list

--- a/ss2022/index.html
+++ b/ss2022/index.html
@@ -29,8 +29,8 @@
       <div class="item bs"><p class="moduleTime">8:15-9:45</p><p class="moduleTxt">Betriebssysteme</p><p class="subTxt">Q&A</p><p class="locationTxt">ONLINE</p></div>
       <div class="item de"><p class="moduleTime">10:15-11:45</p><p class="moduleTxt">Digitalelektronik</p><p class="subTxt">Vorlesung</p><p class="locationTxt">CITEC</p></div>
       <div class="item">GSI Ü, BTS Ü</div>
-      <div class="item">Team 1-1</div>
-      <div class="item">Team 2-1</div>
+      <div class="item"></div>
+      <div class="item"></div>
     </div>
     <div class="row">
       <div class="headerItem"><p>Dienstag</p></div>
@@ -38,7 +38,7 @@
       <div class="item gnn"><p class="moduleTime">10:15-11:45</p><p class="moduleTxt">Neuronale Netze</p><p class="subTxt">Vorlesung</p><p class="locationTxt">CITEC</p></div>
       <div class="item tut matheTut"><p class="moduleTime">12:15-13:45</p><p class="moduleTxt">Mathe IV</p><p class="subTxt">Tutorium</p><p class="locationTxt">V2-216</p></div>
       <div class="item">GSI Ü</div>
-      <div class="item">Team 2-2, 3-1</div>
+      <div class="item"></div>
     </div>
     <div class="row">
       <div class="headerItem"><p>Mittwoch</p></div>
@@ -52,15 +52,15 @@
       <div class="headerItem"><p>Donnerstag</p></div>
       <div class="item"></div>
       <div class="item"></div>
-      <div class="item tut sgpTut"><p class="moduleTime">12:15-13:45</p><p class="moduleTxt">Software-Gruppenprojekt</p><p class="subTxt">Tutorium (vermutl.)</p></div>
+      <div class="item tut sgpTut"><p class="moduleTime">12:15-13:45</p><p class="moduleTxt">Software-Gruppenprojekt</p><p class="subTxt">Tutorium</p><p class="locationTxt">V2-234</p></div>
       <div class="item"></div>
-      <div class="item">Team 1-2, 4-2</div>
+      <div class="item"></div>
     </div>
     <div class="row">
       <div class="headerItem"><p>Freitag</p></div>
       <div class="item"></div>
       <div class="item">GSI-Ü</div>
-      <div class="item">GSI-Ü, Team 3-2</div>
+      <div class="item">GSI-Ü</div>
       <div class="item gsi"><p class="moduleTime">14:15-15:45</p><p class="moduleTxt">Sprachliche Interaktionen</p><p class="subTxt">Vorlesung</p><p class="locationTxt">CITEC</p></div>
       <div class="item tut gnnTut"><p class="moduleTime">16:15-17:45</p><p class="moduleTxt">Neuronale Netze</p><p class="subTxt">Tutorium (vermutl.)</p></div>
     </div>
