updating ss2022 list

--- a/ss2022/index.html
+++ b/ss2022/index.html
@@ -62,7 +62,7 @@
       <div class="item empty"></div>
       <div class="item empty"></div>
       <div class="item gsi"><p class="moduleTime">14:15-15:45</p><p class="moduleTxt">Sprachliche Interaktionen</p><p class="subTxt">Vorlesung</p><p class="locationTxt">CITEC</p></div>
-      <div class="item tut gnnTut"><p class="moduleTime">16:15-17:45</p><p class="moduleTxt">Neuronale Netze</p><p class="subTxt">Tutorium (vermutl.)</p></div>
+      <div class="item tut gnnTut"><p class="moduleTime">16:15-17:45</p><p class="moduleTxt">Neuronale Netze</p><p class="subTxt">Tutorium</p><p class="locationTxt">T2-227, V2-200, X-E0-200</p></div>
     </div>
   </div>
 
@@ -90,8 +90,7 @@
       <div class="moduleItem">
         <p class="moduleTitle">Mathe IV</p>
         <a class="moduleLink lrplus" href="https://lernraumplus.uni-bielefeld.de/course/view.php?id=13158">LR+ Vorlesung</a>
-        <a class="moduleLink lr" href="https://bis.uni-bielefeld.de/sites/45545/Start.aspx">LR Vorlesung</a>
-        <a class="moduleLink lr" href="https://bis.uni-bielefeld.de/sites/45548/Start.aspx">LR Übung</a>
+        <a class="moduleLink lrplus" href="https://lernraumplus.uni-bielefeld.de/course/view.php?id=13672">LR+ Übungen</a>
       </div>
       <div class="moduleItem">
         <p class="moduleTitle">Neuronale Netze</p>
@@ -99,10 +98,12 @@
       </div>
       <div class="moduleItem">
         <p class="moduleTitle">Sprachliche Interaktion</p>
+        <a class="moduleLink lrplus" href="https://lernraumplus.uni-bielefeld.de/course/view.php?id=13698">LR+ Vorlesung</a>
         <a class="moduleLink lrplus" href="https://lernraumplus.uni-bielefeld.de/course/view.php?id=13285">LR+ Übungen</a>
       </div>
       <div class="moduleItem">
         <p class="moduleTitle">Digitalelektronik</p>
+        <a class="moduleLink lr" href="https://bis.uni-bielefeld.de/sites/46150/Start.aspx">Lernraum</a>
       </div>
     </div>
 
