updating ss2022 list

--- a/ss2022/index.html
+++ b/ss2022/index.html
@@ -28,7 +28,7 @@
       <div class="headerItem"><p>Montag</p></div>
       <div class="item bs"><p class="moduleTime">8:15-9:45</p><p class="moduleTxt">Betriebssysteme</p><p class="subTxt">Q&A</p><a class="zoomIcon" href="https://uni-bielefeld.zoom.us/j/98278914859?pwd=VVNHbGZHVHpFNEN3VUk4Vy9EWDNzdz09"><i class="fas fa-video"></i></a></div>
       <div class="item de"><p class="moduleTime">10:15-11:45</p><p class="moduleTxt">Digitalelektronik</p><p class="subTxt">Vorlesung</p><p class="locationTxt">CITEC</p></div>
-      <div class="item tut deTut"><p class="moduleTime">12:15-14:45</p><p class="moduleTxt">Digitalelektronik</p><p class="subTxt">Praktikum</p><p class="locationTxt">?</p><p class="locationTxt">3-STÜNDIG</p></div>
+      <div class="item tut deTut"><p class="moduleTime">12:15-14:45</p><p class="moduleTxt">Digitalelektronik</p><p class="subTxt">Praktikum</p><p class="locationTxt">V2-235</p><p class="locationTxt">3-STÜNDIG</p></div>
       <div class="item empty"></div>
       <div class="item empty"></div>
     </div>
