refactoring, adding new homepage

--- a/404.html
+++ b/404.html
@@ -31,7 +31,7 @@
 </div>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/parallax/3.1.0/parallax.min.js"></script>
-<script src="parallax.js"></script>
+<script src="old/parallax.js"></script>
 
 </body>
 </html>
