--- a/error/404_old.html
+++ b/error/404_old.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <section class="section">
-      <img class="titleimg" src="/images/r2d2.gif" alt="">
+      <img class="titleimg" src="/old/images/r2d2.gif" alt="">
       <p class="title">404</p>
       <p class="subtitle">NOT FOUND</p>
       <p class="funnyInfo">"These aren't the droids you are looking for"</p>
@@ -19,7 +19,7 @@
         <p class="dash">&mdash;</p>
         <a class="status" href="https://www.githubstatus.com/">GitHub Pages Status</a>
       </div>
-      <img src="/images/logo.png" alt="">
+      <img src="/old/images/logo.png" alt="">
     </section>
   </body>
 </html>
