--- a/ss2022/index.html
+++ b/ss2022/index.html
@@ -1,181 +1,11 @@
 <!DOCTYPE html>
-<html lang="de" dir="ltr">
+<html lang="en">
 <head>
-  <meta charset="utf-8">
-  <title>SoSe 2022 Links</title>
-  <link rel="shortcut icon" href="icon.png">
-  <link rel="stylesheet" href="style.css">
-  <link rel="preconnect" href="https://fonts.gstatic.com">
-  <link href="https://fonts.googleapis.com/css2?family=Barlow:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
-  <script src="https://kit.fontawesome.com/038f795198.js" crossorigin="anonymous"></script>
-  <script src="script.js"></script>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8">
+    <title>SS2022</title>
+    <meta http-equiv="refresh" content="0; url=https://noahschuette.de/uni" />
 </head>
-<body onload="onloaded()">
-
-  <div id="userBtnDiv">
-    <button id="manonoahBtn" onclick="switchPlan('manonoah')">Manoel/Noah</button>
-    <button id="manuBtn" onclick="switchPlan('manu')">Manuel</button>
-  </div>
-  <!--"Stundenplan"-->
-  <div class="table">
-    <div class="leftRow">
-      <div class="headerItem"></div>
-      <div class="leftItem"><p>8:15-9:45</p></div>
-      <div class="leftItem"><p>10:15-11:45</p></div>
-      <div class="leftItem"><p>12:15-13:45</p></div>
-      <div class="leftItem"><p>14:15-15:45</p></div>
-      <div class="leftItem"><p>16:15-17:45</p></div>
-      <!--<div class="leftItem"><p>18:15-19:45</p></div>-->
-    </div>
-    <!--<div class="item ra"><p class="moduleTime">10:15-11:45</p><p class="moduleTxt">Rechnerarchitektur</p><p class="subTxt">Q&A</p></div>--->
-    <div class="row">
-      <div class="headerItem"><p>Montag</p></div>
-      <div class="item bs"><p class="moduleTime">8:15-9:45</p><p class="moduleTxt">Betriebssysteme</p><p class="subTxt">Q&A</p><a class="zoomIcon" href="https://uni-bielefeld.zoom.us/j/98278914859?pwd=VVNHbGZHVHpFNEN3VUk4Vy9EWDNzdz09"><i class="fas fa-video"></i></a></div>
-      <div class="item de manonoah"><p class="moduleTime">10:15-11:45</p><p class="moduleTxt">Digitalelektronik</p><p class="subTxt">Vorlesung</p><p class="locationTxt">CITEC</p></div>
-      <div class="item empty manu"></div>
-      <div class="item tut deTut itemLarge manonoah"><p class="moduleTime">12:15-14:45</p><p class="moduleTxt">Digitalelektronik</p><p class="subTxt">Tutorium</p><p class="locationTxt">V2-235</p><p class="locationTxt">3-STÜNDIG</p></div>
-      <div class="item tut bsTut manu"><p class="moduleTime">12:15-13:45</p><p class="moduleTxt">Betriebssysteme</p><p class="subTxt">Tutorium</p><p class="locationTxt">ONLINE</p></div>
-      <div class="item empty itemSmall manonoah"></div>
-      <div class="item empty manu"></div>
-      <div class="item empty"></div>
-    </div>
-    <div class="row">
-      <div class="headerItem"><p>Dienstag</p></div>
-      <div class="item empty"></div>
-      <div class="item gnn"><p class="moduleTime">10:15-11:45</p><p class="moduleTxt">Neuronale Netze</p><p class="subTxt">Vorlesung</p><p class="locationTxt">CITEC</p></div>
-      <div class="item tut matheTut manonoah"><p class="moduleTime">12:15-13:45</p><p class="moduleTxt">Mathe IV</p><p class="subTxt">Tutorium</p><p class="locationTxt">V2-216</p></div>
-      <div class="item empty manu"></div>
-      <div class="item tut gsiTut"><p class="moduleTime">14:15-15:45</p><p class="moduleTxt">Sprachliche Interaktionen</p><p class="subTxt">Tutorium</p><p class="locationTxt">CITEC 1.204</p></div>
-      <div class="item empty"></div>
-    </div>
-    <div class="row">
-      <div class="headerItem"><p>Mittwoch</p></div>
-      <div class="item mathe"><p class="moduleTime">8:15-9:45</p><p class="moduleTxt">Mathe IV</p><p class="subTxt">Vorlesung</p><p class="locationTxt">H7</p></div>
-      <div class="item matheZwei manu"><p class="moduleTime">10:15-11:45</p><p class="moduleTxt">Mathe II</p><p class="subTxt">Vorlesung</p><p class="locationTxt">H1</p></div>
-      <div class="item empty manonoah"></div>
-      <div class="item tut matheTut manu"><p class="moduleTime">12:15-13:45</p><p class="moduleTxt">Mathe IV</p><p class="subTxt">Tutorium</p><p class="locationTxt">V2-216</p></div>
-      <div class="item empty manonoah"></div>
-      <div class="item tut bsTut manonoah"><p class="moduleTime">14:15-15:45</p><p class="moduleTxt">Betriebssysteme</p><p class="subTxt">Tutorium</p><a class="zoomIcon" href="https://uni-bielefeld.zoom.us/j/67342223463?pwd=dGs1VzAySzNZLzZDR1Nob2pNZnlqdz09"><i class="fas fa-video"></i></a></div>
-      <div class="item empty manu"></div>
-      <div class="item empty"></div>
-    </div>
-    <div class="row">
-      <div class="headerItem"><p>Donnerstag</p></div>
-      <div class="item empty"></div>
-      <div class="item empty manonoah"></div>
-      <div class="item tut matheZweiTut itemLarge manu"><p class="moduleTime">10:15-12:45</p><p class="moduleTxt">Mathe II</p><p class="subTxt">Tutorium</p><p class="locationTxt">V4-112</p><p class="locationTxt">3-STÜNDIG</p></div>
-      <div class="item tut sgpTut manonoah"><p class="moduleTime">12:15-13:45</p><p class="moduleTxt">Software-Gruppenprojekt</p><p class="subTxt">Tutorium</p><p class="locationTxt">V2-234</p></div>
-      <div class="item empty itemSmall manu"></div>
-      <div class="item empty"></div>
-      <div class="item empty"></div>
-    </div>
-    <div class="row">
-      <div class="headerItem"><p>Freitag</p></div>
-      <div class="item empty"></div>
-      <div class="item empty manonoah"></div>
-      <div class="item tut sgpTut manu"><p class="moduleTime">10:15-11:45</p><p class="moduleTxt">Software-Gruppenprojekt</p><p class="subTxt">Tutorium</p></div>
-      <div class="item matheZwei manu"><p class="moduleTime">12:15-14:45</p><p class="moduleTxt">Mathe II</p><p class="subTxt">Vorlesung</p><p class="locationTxt">H12</p></div>
-      <div class="item empty manonoah"></div>
-      <div class="item gsi"><p class="moduleTime">14:15-15:45</p><p class="moduleTxt">Sprachliche Interaktionen</p><p class="subTxt">Vorlesung</p><p class="locationTxt">CITEC</p></div>
-      <div class="item tut gnnTut"><p class="moduleTime">16:15-17:45</p><p class="moduleTxt">Neuronale Netze</p><p class="subTxt">Tutorium</p><p class="locationTxt">X-E0-200</p></div>
-    </div>
-  </div>
-
-  <section id="rightPart">
-    <!---Fächer-->
-    <p id="upperTitle" class="title">Module</p>
-    <div class="modules">
-      <div class="moduleItem">
-        <p class="moduleTitle">Allgemein</p>
-        <a class="moduleLink" href="https://ekvv.uni-bielefeld.de/kvv_publ/publ/benvw_Login_MatrikelAct">eKVV</a>
-        <a class="moduleLink" href="https://docs.google.com/spreadsheets/d/1gHT5yleFO7J8022jn4L9Je-N-mDim4P59t-0V5LPmRo/edit#gid=1893177104">Liste (Google-Sheets)</a>
-      </div>
-      <div class="moduleItem">
-        <p class="moduleTitle">Betriebssysteme</p>
-        <a class="moduleLink techfak" href="https://www.ti.uni-bielefeld.de/html/teaching/SS22/techinf2/index.html">Ti-Seite</a>
-        <a class="moduleLink techfak" href="https://www.ti.uni-bielefeld.de/downloads/SS22/techinf2/VIDEOCAPTURE/bs_videos_weekly.html">Videos</a>
-        <a class="moduleLink lrplus" href="https://lernraumplus.uni-bielefeld.de/course/view.php?id=12922">Lernraum+</a>
-      </div>
-      <div class="moduleItem">
-        <p class="moduleTitle">Software-Gruppenprojekt</p>
-        <a class="moduleLink lrplus" href="https://lernraumplus.uni-bielefeld.de/course/view.php?id=12773">Lernraum+</a>
-        <a class="moduleLink redmine" href="https://se.techfak.de/projects/gp-se-ss-2022">Redmine</a>
-        <!--<a class="moduleLink jenkins" href="https://citdpe.techfak.uni-bielefeld.de/">Jenkins</a>-->
-      </div>
-      <div class="moduleItem">
-        <p class="moduleTitle">Mathe IV</p>
-        <a class="moduleLink lrplus" href="https://lernraumplus.uni-bielefeld.de/course/view.php?id=13158">LR+ Vorlesung</a>
-        <a class="moduleLink lrplus" href="https://lernraumplus.uni-bielefeld.de/course/view.php?id=13672">LR+ Übungen</a>
-      </div>
-      <div class="moduleItem">
-        <p class="moduleTitle">Neuronale Netze</p>
-        <a class="moduleLink lrplus" href="https://lernraumplus.uni-bielefeld.de/course/view.php?id=13603">Lernraum+</a>
-      </div>
-      <div class="moduleItem">
-        <p class="moduleTitle">Sprachliche Interaktion</p>
-        <a class="moduleLink lrplus" href="https://lernraumplus.uni-bielefeld.de/course/view.php?id=13698">LR+ Vorlesung</a>
-        <a class="moduleLink lrplus" href="https://lernraumplus.uni-bielefeld.de/course/view.php?id=13285">LR+ Übungen</a>
-      </div>
-      <div class="moduleItem">
-        <p class="moduleTitle">Digitalelektronik</p>
-        <a class="moduleLink lr" href="https://bis.uni-bielefeld.de/sites/46150/Start.aspx">Lernraum</a>
-        <a class="moduleLink lrplus" href="https://lernraumplus.uni-bielefeld.de/course/view.php?id=13852">Lernraum+</a>
-      </div>
-      <div class="moduleItem">
-        <p class="moduleTitle">Mathe II</p>
-        <a class="moduleLink lr" href="https://bis.uni-bielefeld.de/sites/45527/Start.aspx">LR Vorlesung</a>
-        <a class="moduleLink lrplus" href="https://lernraumplus.uni-bielefeld.de/course/view.php?id=13884">LR+ Übungen</a>
-      </div>
-    </div>
-
-    <button id="showJSONpart" onclick="showJSONpart()" class="showJSONpart">TODO & Punktetabelle laden</button>
-
-    <!--<p class="title">TO-DO</p>
-    <div id="tasks" class="tasks">
-      <div class="taskInput">
-        <input id="titleInput" type="text" placeholder="New Task">
-        <input id="dateInput" type="text" placeholder="DD/MM" maxlength="5">
-        <button class="submit" onclick="addTask()"><i class="fas fa-arrow-right"></i></button>
-      </div>
-    </div>
-    <p class="title">Punktetabelle</p>
-    <div class="points" id="points">
-      <div class="scala">
-        <div class="scalaMain">
-          <p class="scalaTitle">template</p>
-          <p class="scalaPercentage">50%</p>
-        </div>
-        <div class="scalaSub">
-          <p class="scalaPoints">5/10</p>
-          <p class="scalaPoints"><b>= 5/10</b></p>
-        </div>
-      </div>
-    </div>
-    <p class="title">Klausurtermine</p>
-    <div class="tests" id="tests">
-      <div class="testsColumn">
-        <p class="testsHeader">Fach</p>
-        <p class="mathe">Grundlagen Kongitiver Systeme</p>
-      </div>
-      <div class="testsColumn">
-        <p class="testsHeader">Erstklausur</p>
-        <p>4.20.</p>
-      </div>
-      <div class="testsColumn">
-        <p class="testsHeader">Zweitklausur</p>
-        <p>13.37</p>
-      </div>
-    </div>
-    <p class="title">Notizen</p>
-    <div class="notes" id="notes">
-      Fehler beim Laden der Notizen!
-    </div>-->
-  </section>
-
-  <!--KW -->
-  <p class="kalenderwoche" id="kw">KW 187</p>
-  <!--<button id="refresh" onclick="readRequest(true)"><i class="fas fa-sync-alt"></i></button>-->
+<body>
 
 </body>
 </html>
