--- a/uni/index.html
+++ b/uni/index.html
@@ -35,7 +35,7 @@
     </div>
     <div class="row">
       <div class="headerItem"><p>Dienstag</p></div>
-      <div class="item bv"><p class="moduleTime">10:15-11:45</p><p class="moduleTxt">Betriebssysteme</p><p class="subTxt">Vorlesung</p><p class="locationTxt">T2-213</p></div>
+      <div class="item bv"><p class="moduleTime">10:15-11:45</p><p class="moduleTxt">Bildverarbeitung</p><p class="subTxt">Vorlesung</p><p class="locationTxt">V2-205</p></div>
       <div class="item tut ssTut"><p class="moduleTime">12:15-13:45</p><p class="moduleTxt">Sound Synthesis</p><p class="subTxt">Tutorium</p><p class="locationTxt">E0-236 & ONLINE</p><p class="locationTxt weekEven">2-WÖCHIG</p></div>
       <div class="item fl"><p class="moduleTime">14:15-15:45</p><p class="moduleTxt">Formal Logic</p><p class="subTxt">Vorlesung</p><p class="locationTxt">H11</p></div>
       <div class="item empty"></div>
@@ -49,7 +49,7 @@
     </div>
     <div class="row">
       <div class="headerItem"><p>Donnerstag</p></div>
-      <div class="item gm"><p class="moduleTime">10:15-11:45</p><p class="moduleTxt">Gründungsmanagement / Mikroelektronik</p><p class="subTxt">Vorlesung</p><p class="locationTxt">H10 / CITEC 1.204</p></div>   <div class="item empty"></div>
+      <div class="item gm"><p class="moduleTime">10:15-11:45</p><p class="moduleTxt">Gründungs-management</p><p class="subTxt">Vorlesung</p><p class="locationTxt">H10</p></div>   <div class="item empty"></div>
       <div class="item empty"></div>
       <div class="item empty"></div>
     </div>
@@ -95,9 +95,7 @@
       </div>
       <div class="moduleItem">
         <p class="moduleTitle">Gründungsmanagement</p>
-      </div>
-      <div class="moduleItem">
-        <p class="moduleTitle">Mikroelektronische Systeme</p>
+        <a class="moduleLink gmanagement" href="https://www.gruendungsmanagement.online/">GM-Online</a>
       </div>
     </div>
 
