add / refactoring uni page

--- a/uni/index.html
+++ b/uni/index.html
@@ -13,10 +13,11 @@
 </head>
 <body onload="onloaded()">
 
+<!--
   <div id="userBtnDiv">
     <button id="manonoahBtn" onclick="switchPlan('manonoah')">Manoel/Noah</button>
     <button id="manuBtn" onclick="switchPlan('manu')">Manuel</button>
-  </div>
+  </div>-->
   <!--"Stundenplan"-->
   <div class="table">
     <div class="leftRow">
@@ -49,7 +50,8 @@
     </div>
     <div class="row">
       <div class="headerItem"><p>Donnerstag</p></div>
-      <div class="item gm"><p class="moduleTime">10:15-11:45</p><p class="moduleTxt">Gründungs-management</p><p class="subTxt">Vorlesung</p><p class="locationTxt">H10</p></div>   <div class="item empty"></div>
+      <div class="item gm"><p class="moduleTime">10:15-11:45</p><p class="moduleTxt">Gründungs-management</p><p class="subTxt">Vorlesung</p><p class="locationTxt">H10</p></div>
+      <div class="item tut raTut"><p class="moduleTime">12:15-13:45</p><p class="moduleTxt">Mobile Roboter</p><p class="subTxt">Tutorium</p><a class="zoomIcon" href="https://uni-bielefeld.zoom.us/j/62769612186?pwd=M2ZYUkN4em9MUTBLanZwWHUxWjk4dz09"><i class="fas fa-video"></i></a></div>
       <div class="item empty"></div>
       <div class="item empty"></div>
     </div>
@@ -83,7 +85,7 @@
       </div>
       <div class="moduleItem">
         <p class="moduleTitle">Farbe in der digitalen Gestaltung</p>
-        <a class="moduleLink lr" href="https://bis.uni-bielefeld.de/sites/49609/Start.aspx">Lernraum</a>
+        <a class="moduleLink lrplus" href="https://lernraumplus.uni-bielefeld.de/course/view.php?id=15190">Lernraum+</a>
       </div>
       <div class="moduleItem">
         <p class="moduleTitle">Sound Synthesis</p>
