--- a/uni/index.html
+++ b/uni/index.html
@@ -46,7 +46,7 @@
       <div class="item clr"><p class="moduleTime">10:15-11:45</p><p class="moduleTxt">Farbe digitalen Mediengestaltung</p><p class="subTxt">Vorlesung</p><p class="locationTxt">H8 / U2-240</p></div>
       <div class="item empty"></div>
       <div class="item ss"><p class="moduleTime">14:15-15:45</p><p class="moduleTxt">Sound Synthesis</p><p class="subTxt">Vorlesung</p><p class="locationTxt">V2-205 & ONLINE</p><a class="zoomIcon" href="https://uni-bielefeld.zoom.us/j/92457357757?pwd=NUJWZUFDTUlRK0x2SnNjL1NBWkg1Zz09"><i class="fas fa-video"></i></a></div>
-      <div class="item empty"></div>
+      <div class="item tut flTut"><p class="moduleTime">16:15-17:45</p><p class="moduleTxt">Formal Logic</p><p class="subTxt">Tutorium</p><p class="locationTxt">U2-147</p></div>
     </div>
     <div class="row">
       <div class="headerItem"><p>Donnerstag</p></div>
