--- a/old/index.html
+++ b/old/index.html
@@ -7,7 +7,7 @@
     <title>Noah Schütte - noahschuette</title>
     <meta name="description" content="I am Noah, a hobby programmer from Germany. I like to develope Indie Games in Unity and other stuff."/>
     <meta name="keywords" content="Noah Schütte, Noah Schütte Bielefeld, n0j0games, noahschuette, n0j0">
-    <link rel="icon" href="images/logo.png">
+    <link rel="icon" href="../images/logo.png">
     <!-- CSS -->
     <link href="style.css" rel="stylesheet" type="text/css"/>
     <link href="mobile.css" rel="stylesheet" type="text/css"/>
