--- a/error/403_old.html
+++ b/error/403_old.html
@@ -19,7 +19,7 @@
         <p class="dash">&mdash;</p>
         <a class="status" href="https://www.githubstatus.com/">GitHub Pages Status</a>
       </div>
-      <img src="/old/images/logo.png" alt="">
+      <img src="/images/logo.png" alt="">
     </section>
   </body>
 </html>
