--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             <img id="spotifyImg" src="https://m.media-amazon.com/images/I/813XseYNw1L._SY355_.jpg" alt="">
             <div id="spotifyRight">
                 <p id="spotifyArtist">The Weekend</p>
-                <a href="" id="spotifyAlbum">Heartless</a>
+                <a href="" id="spotifyAlbum">After Hours</a>
                 <p id="spotifyTitle" class="midText">on After Hours</p>
             </div>
         </div>
