--- a/projects/index.html
+++ b/projects/index.html
@@ -21,6 +21,13 @@
 </head>
 <body>
     <div class="link">
+        <a href="https://n0j0games.itch.io/">Unity Games</a>
+    </div>
+    <div class="link">
+        <img src="https://yeardle.netlify.app/icon.png" alt="">
+        <a href="https://yeardle.netlify.app/">Yeardle - Kanye West Heardle</a>
+    </div>
+    <div class="link">
         <img src="https://releasr.netlify.app/images/favicon.png" alt="">
         <a href="https://releasr.netlify.app/">releasr - Spotify Release Tracker (WIP)</a>
     </div>
@@ -35,9 +42,9 @@
     <div class="link">
         <a href="../tcwquotes">The Clone Wars Quote Generator</a>
     </div>
-    <div class="link" id="lastLink">
+    <!--<div class="link" id="lastLink">
         View all my projects on <i class="fa-brands fa-github"></i>
         <a href="https://github.com/n0j0games">GitHub @n0j0games</a>
-    </div>
+    </div>-->
 </body>
 </html>
