--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <!-- Title & Icon -->
-    <title>noahschuette.de | Homepage</title>
+    <title>Noah's Homepage</title>
     <link rel="shortcut icon" href="https://noahschuette.github.io/images/logo.png">
     <!-- Meta -->
     <meta name="description" content="">
@@ -23,7 +23,7 @@
     <div id="mainContent">
 
         <div id="midContent">
-            <p id="title" style="display: none">Hello There!</p>
+            <p id="title">Loading page :)</p>
             <p id="subtitle" style="display: none">schreib hier irgend was sinnvolles rein</p>
         </div>
         <div id="leftContent" onclick="redirect('https://dribbble.com/n0j0')">
