--- a/projects/index.html
+++ b/projects/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <!-- Title & Icon -->
-    <title>Title - noahschuette.de</title>
+    <title>Projects</title>
     <link rel="shortcut icon" href="https://noahschuette.github.io/images/logo.png">
     <!-- Meta -->
     <meta name="description" content="">
@@ -20,9 +20,6 @@
     <!-- Scripts -->
 </head>
 <body>
-    <div class="link">
-        <a href="https://n0j0games.itch.io/">Unity Games</a>
-    </div>
     <div class="link">
         <img src="https://yeardle.netlify.app/icon.png" alt="">
         <a href="https://yeardle.netlify.app/">Yeardle - Kanye West Heardle</a>
