--- a/uni/index.html
+++ b/uni/index.html
@@ -82,6 +82,7 @@
       <div class="moduleItem">
         <p class="moduleTitle">Bildverarbeitung</p>
         <a class="moduleLink lr" href="https://bis.uni-bielefeld.de/sites/50090/Start.aspx">Lernraum</a>
+        <a class="moduleLink lrplus" href="https://lernraumplus.uni-bielefeld.de/course/view.php?id=15481">Lernraum+</a>
       </div>
       <div class="moduleItem">
         <p class="moduleTitle">Farbe in der digitalen Gestaltung</p>
