--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
     <div id="mainContent">
 
         <div id="midContent">
-            <p id="title">Loading page :)</p>
-            <p id="subtitle" style="display: none">schreib hier irgend was sinnvolles rein</p>
+            <p id="title">Hello There!</p>
+            <p id="subtitle">Check out my <a href="https://releasr.netlify.app">Spotify Release Tracker</a>!</p>
         </div>
         <div id="leftContent" onclick="redirect('https://dribbble.com/n0j0')">
             <img class="pixelArt" id="pixelArt0" src="https://cdn.dribbble.com/users/7787883/screenshots/18143696/media/9d1ae5ba947a24f87599c7212be5fd80.png" alt="">
