--- a/projects/index.html
+++ b/projects/index.html
@@ -20,10 +20,10 @@
     <!-- Scripts -->
 </head>
 <body>
-    <div class="link">
+   <!-- <div class="link">
         <img src="https://yeardle.netlify.app/icon.png" alt="">
         <a href="https://yeardle.netlify.app/">Yeardle - Kanye West Heardle</a>
-    </div>
+    </div>-->
     <div class="link">
         <img src="https://releasr.netlify.app/images/favicon.png" alt="">
         <a href="https://releasr.netlify.app/">releasr - Spotify Release Tracker (WIP)</a>
@@ -39,9 +39,9 @@
     <div class="link">
         <a href="../tcwquotes">The Clone Wars Quote Generator</a>
     </div>
-    <!--<div class="link" id="lastLink">
+    <div class="link" id="lastLink">
         View all my projects on <i class="fa-brands fa-github"></i>
         <a href="https://github.com/n0j0games">GitHub @n0j0games</a>
-    </div>-->
+    </div>
 </body>
 </html>
