--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <link rel="stylesheet" href="style.css">
     <!-- Scripts -->
     <script src="load.js"></script>
+
 </head>
 <body onload="load()">
     <div id="mainContent">
@@ -26,10 +27,10 @@
             <p id="title">Hello There!</p>
             <p id="subtitle">Check out my <a href="https://releasr.netlify.app">Spotify Release Tracker</a>!</p>
         </div>
-        <div id="leftContent" onclick="redirect('https://dribbble.com/n0j0')">
-            <img class="pixelArt" id="pixelArt0" src="https://cdn.dribbble.com/users/7787883/screenshots/18143696/media/9d1ae5ba947a24f87599c7212be5fd80.png" alt="">
-            <img class="pixelArt" id="pixelArt1" src="https://cdn.dribbble.com/users/7787883/screenshots/15661816/media/4ae8446e8b7000ea61a600f4dac57c37.png" alt="">
-            <img class="pixelArt" id="pixelArt2" src="https://cdn.dribbble.com/users/7787883/screenshots/15606076/media/7841eca744d94dca2c7e2f8f9a2375a9.png" alt="">
+        <div id="leftContent" onclick="redirect('pixelart/index.html')">
+            <img class="pixelArt" id="pixelArt2" src="https://raw.githubusercontent.com/n0j0games/pixelart/main/graduation_small.gif" alt="">
+            <img class="pixelArt" id="pixelArt1" src="https://raw.githubusercontent.com/n0j0games/pixelart/main/witcher.png" alt="">
+            <img class="pixelArt" id="pixelArt0" src="https://raw.githubusercontent.com/n0j0games/pixelart/main/heroesVillains.png" alt="">
             <div id="arrowLeftDiv">
                 <img id="arrowLeft" src="images/arrow1.png" alt="">
                 <p class="midText" id="arrowLeftText">Look at my PixelArt</p>
