--- a/projects/index.html
+++ b/projects/index.html
@@ -24,13 +24,16 @@
         <img src="https://yeardle.netlify.app/icon.png" alt="">
         <a href="https://yeardle.netlify.app/">Yeardle - Kanye West Heardle</a>
     </div>-->
+   <div class="link">
+       <a href="https://releasr.netlify.app/">Spotify Discography Crawler (Requires Access Key, WIP)</a>
+   </div>
     <div class="link">
         <img src="https://releasr.netlify.app/images/favicon.png" alt="">
-        <a href="https://releasr.netlify.app/">releasr - Spotify Release Tracker (WIP)</a>
+        <a href="https://releasr.netlify.app/">releasr - Spotify Release Tracker</a>
     </div>
     <div class="link">
         <img src="../palettebin/iconMulticolor.png" alt="">
-        <a href="../palettebin">Palettebin</a>
+        <a href="../palettebin">Palettebin (Color Palette Library & Generator)</a>
     </div>
     <div class="link">
         <img src="../minitxt/images/logo.png" alt="">
